fix: [SSCA-1175]: fix issues in spec (#57153)
* feat: [SSCA-1062]: Add implementation for Listing API of remediation

* fix: [SSCA-1062]: Address comments

* fix: [SSCA-1175]: fix spec
